--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^2.0.0
   google_sign_in: ^5.4.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
